syntax = "proto3";

package io.lionweb.protobuf.streaming;

option java_multiple_files = true;
option java_package = "io.lionweb.protobuf.streaming";
option java_outer_classname = "ChunkProtos";

message PsTest {
  optional uint32 opt = 1;
  uint32 req = 2;
}

message PsMessage {
  oneof message {
      PsSerializationFormatVersion serializationFormatVersion = 1;
      PsStringValue stringValue = 2;
      PsMetaPointer metaPointer = 3;
      PsLanguage language = 4;
      PsNode node = 5;
      PsUnboundNodeId unboundId = 6;
  }
}

message PsSerializationFormatVersion {
  string version = 1;
}

message PsChunk {
  PsSerializationFormatVersion serializationFormatVersion = 1;
  repeated PsStringValue stringValues = 2;
  repeated PsMetaPointer metaPointers= 3;
  repeated PsLanguage languages = 4;
  repeated PsNode nodes = 5;
  repeated PsUnboundNodeId unboundIds = 6;
}

message PsStringValue {
//  uint32 strIdx = 1;
  string value = 2;
}

message PsLanguage {
//  uint32 langIdx = 1;
  uint32 key_StrIdx = 2;
  uint32 version_StrIdx = 3;
}

message PsUnboundNodeId {
  uint32 nodeIdx = 1;
  uint32 id_StrIdx = 2;
}

message PsNode {
  uint32 nodeIdx = 1;
  uint32 id_StrIdx = 2;
  uint32 classifier_metaPointerIdx = 3;
  repeated PsProperty properties = 4;
  repeated PsContainment containments = 5;
  repeated PsReference references = 6;
  repeated uint32 annotations_nodeIdx = 7;
  optional uint32 parent_nodeIdx = 8;
}

message PsMetaPointer {
//  uint32 metaPointerIdx = 1;
  uint32 language_strIdx = 2;
  uint32 version_strIdx = 3;
  uint32 key_strIdx = 4;
}

message PsProperty {
  uint32 type_metaPointerIdx = 1;
  optional uint32 value_strIdx = 2;
}

message PsContainment {
  uint32 type_metaPointerIdx = 1;
  repeated uint32 children_nodeIdx = 2;
}

message PsReference {
  uint32 type_metaPointerIdx = 1;
  repeated PsReferenceValue values = 2;
}

message PsReferenceValue {
  optional uint32 resolveInfo_strIdx = 1;
  optional uint32 referred_nodeIdx = 2;
}